# cporechop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/porechop/: adapter_file.hpp  adapters.hpp  align.hpp  barcode.hpp  cli.hpp  detect.hpp  full_barcode.hpp  identity.hpp  io.hpp  middle.hpp  output.hpp  pipeline.hpp  read.hpp  scoring.hpp  threads.hpp  trim.hpp  types.hpp
src/: adapter_file.cpp  align.cpp  barcode.cpp  cli.cpp  detect.cpp  full_barcode.cpp  identity.cpp  io.cpp  main.cpp  middle.cpp  output.cpp  pipeline.cpp  scoring.cpp  threads.cpp  trim.cpp
